src/components/base-components/custom-table/styles.css
custom-table {
    font-family: var(--font-family-default);
    font-size: var(--font-size-default);
    font-weight: var(--font-weight-default);
    color: var(--color-text-default);
    line-height: var(--line-height-default);
    & table {
        border-spacing: 0;
        border: 1px solid #e7e4e4;
        border-radius: 6px;
        overflow: hidden;
        width: 100%;
        margin: 0.75rem 0px;
        & td,
        & th {
            padding: 8px 12px;
        }
        & thead {
            & th {
                text-align: left;
                font-weight: 500;
                background-color: var(--background-muted);
                border-bottom: 1px solid #dddada;
                line-height: var(--line-height-table-header);
            }
        }
        & tbody {
            & tr {
                &:nth-child(even) {
                    background-color: #fefcfc;
                }
            }
            & tr:not(:last-of-type) {
                & td {
                    border-bottom: 1px solid #dddada;
                }
            }
        }
    }
}

